# interview_prep_agent

./: .env.example  .gitignore  BUILD_INSTRUCTIONS.md  LICENSE  README.md  config.py  main.py  pyproject.toml
agents/: discovery.py  email_analyzer.py  native_search.py  prep_coach.py  web_researcher.py
examples/: baseline_without_arcade.py
models/: data_models.py
scripts/: demo.sh
tests/: test_company_name_normalization.py  test_discovery_urls.py  test_email_content_extraction.py  test_firecrawl_extract.py  test_validators.py
tools/: __init__.py  executor.py  firecrawl.py  gmail.py
utils/: __init__.py  logging.py  validators.py
