[project]
name = "interview-prep-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "arcadepy>=1.7.0",
    "beautifulsoup4>=4.13.5",
    "lxml>=6.0.1",
    "openai>=1.105.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
