[project]
name = "interview-prep-agent"
version = "0.1.0"
description = "Interview Prep Agent with Arcade.dev"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcadepy>=1.7.0",
    "beautifulsoup4>=4.13.5",
    "openai>=1.105.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
license = { file = "LICENSE" }
authors = [
    { name = "Interview Prep Agent Contributors" }
]

[project.urls]
# Update these with your actual repository URL before publishing
Homepage = "https://github.com/your-username/interview-prep-agent"
Repository = "https://github.com/your-username/interview-prep-agent"
